--- a/scss/style.css
+++ b/scss/style.css
@@ -1,5 +1,63 @@
+* {
+  padding: 0;
+  margin: 0;
+}
+
 body {
   background-color: black;
+}
+
+.container {
+  display: flex;
+  flex-direction: row;
+  height: 2376px;
+  width: 1200px;
+  margin: 0 auto;
+  background-color: white;
+}
+
+.navbar {
+  display: block;
+  float: left;
+  width: 20%;
+  background-color: #383843;
+  color: #a6a6a9;
+}
+
+#navi_list {
+  padding-left: 30px;
+  padding-top: 22px;
+  list-style: none;
+  font-family: "Raleway", sans-serif;
+  color: #ffffff;
+  font-size: 22px;
+}
+#navi_list li {
+  padding-bottom: 44px;
+}
+
+.right_column {
+  width: 80%;
+  display: block;
+  background-color: blue;
+}
+
+.header {
+  display: block;
+  width: 100%;
+  height: 436px;
+  background: url("/assets/img/header.jpg") center no-repeat;
+  background-size: cover;
+}
+
+.portfolio_block {
+  background-color: antiquewhite;
+  padding: 3% 3% 0 7%;
+}
+
+#portrait {
+  width: 100%;
+  height: auto;
 }
 
 /*# sourceMappingURL=style.css.map */
